# KirinLabelAssistant

./: CMakeLists.txt  README.md
resource/: icon.rc  kirinresource.qrc
resource/themes/: Default-0.qss  Default-1.qss  Default-2.qss  Default-3.qss  Default-4.qss  Default-5.qss  Default-6.qss
resource/translations/: kirinui_ch_zn.qm  kirinui_en.qm
src/: cveast.cpp  cveast.h  dialogabout.cpp  dialogabout.h  frameheader.cpp  frameheader.h  itempoint.cpp  itempoint.h  itemrect.cpp  itemrect.h  main.cpp  widgetgraphicsview.cpp  widgetgraphicsview.h  windowmain.cpp  windowmain.h
ui/: dialogabout.ui  windowmain.ui
